@@ -1,12 +1,12 @@
 [comment {-*- tcl -*- doctools manpage}]
-[manpage_begin canvas::snap n 1]
+[manpage_begin canvas::snap n 1.0.1]
 [copyright {2004 George Petasis (http://wiki.tcl.tk/1404)}]
 [copyright {2010 Documentation, Andreas Kupries}]
 [moddesc   {Variations on a canvas}]
 [titledesc {Canvas snapshot to Tk photo image}]
 [require Tcl 8.5]
 [require Tk 8.5]
-[require canvas::snap [opt 1]]
+[require canvas::snap [opt 1.0.1]]
 [require img::window]
 [description]
 
